--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://scontent.fsgn2-7.fna.fbcdn.net/v/t39.30808-6/275854716_1009516859998712_3360791562563963516_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=Nd-x8LBVkfEAX-8j_3d&_nc_ht=scontent.fsgn2-7.fna&oh=00_AfCE12FbrIzhS4MFFIpLnp91XXbAS27AcV3yTsAqHtNIHw&oe=640ADB19"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Gửi T❤</title>
+    <title>Gửi Enfxn❤</title>
   </head>
   <body>
     <div class="wrapper">
@@ -30,16 +30,17 @@
           </div>
         </div>
       </div>
-      <button><p>Nhấn vào đây đi bae🖤</p></button>
+      <button><p>Click here🖤</p></button>
       <div class="content">
         <i class="fa-solid fa-xmark"></i>
-        <h1>Gửi em!</h1>
+        <h1>Chúc mừng sinh nhật!</h1>
         <p>
-          "💞Anh ước rằng mình có thể gặp em sớm hơn thì những vất vả mà em trải
-          qua sẽ có anh bên cạnh.💗 Từ nay về sau, trách nhiệm của anh là chăm
-          sóc và thay em gánh chịu khó khăn. Vì thế, hãy thật hạnh phúc và vui
-          vẻ, đừng bận tâm về thế giới, vì xung quanh em chính là anh. Chúc em
-          8/3 ấm áp, mãi yêu em.💞"
+          "Xin chào! Lại là mình đây ;) Một năm nữa lại trôi qua với rất nhiều kỉ niệm nhỉ?
+          Tuổi 18 cuối cùng cũng đã ghé thăm bạn rồi đó, giờ thì "lớn" thật rồi ha (đủ tuổi đi tù!?)
+          Mong rằng chúng ta sẽ vẫn tiếp tục đồng hành cùng nhau trong những năm tiếp theo! (let's go!!)<br>
+          Sinh nhật vui vẻ nhé!<br>
+          "Đừng tuyệt vọng, cuộc sống cũng giống như điện tâm đồ, nếu thuận buồm xuôi gió, chẳng phải cho thấy bạn đã chết rồi sao"<br>
+                                          - Stealh Duy -"
         </p>
       </div>
     </div>
